Prevent Notes dialog from going off screen

--- a/src/app/notes-dialog/notes-dialog.component.scss
+++ b/src/app/notes-dialog/notes-dialog.component.scss
@@ -4,6 +4,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 100%;
+
+  .notebook {
+    flex: 1;
+    overflow: hidden;
+  }
 
   .page__header {
     color: #931010;
