--- a/src/styles/_notebook.scss
+++ b/src/styles/_notebook.scss
@@ -10,6 +10,6 @@
 }
 
 .notebook-page {
-    padding: 95px;
+    padding: 70px;
     width: 50%;
 }
